# RefStorage

./: .gitignore  CMakeLists.txt  README.md
Third-party-library/log/: log.hpp
Third-party-library/log/include/: AsyncLogProcessor.hpp - 未完成  ColoredFormatter.hpp  ConsoleSink.hpp  FileSink.hpp  Format.hpp  LogConfig.hpp  LogFormatter.hpp  LogLevel.hpp  LogMacros.hpp  LogMessage.hpp  LogSink.hpp  Logger.hpp
Third-party-library/log/src/: ColoredFormatter.cpp  ConsoleSink.cpp  FileSink.cpp  LogConfig.cpp  LogFormatter.cpp  LogLevel.cpp  Logger.cpp
config/: logging.conf
docs/: API.md  DEPENDENCIES.md
include/common/: common_types.hpp
scripts/: init_database.sql
src/: main.cpp
src/core/metadata_manager/include/: metadata_manager.hpp
src/database/include/: database_config.hpp  database_connector.hpp
src/database/src/: database_connector.cpp
src/utils/include/: file_utils.hpp  hash_utils.hpp
src/utils/src/: file_utils.cpp  hash_utils.cpp
